--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -365,6 +365,10 @@ img {
   border-radius: 6px;
 }
 
+img-rounded2 {
+    max-width: 30px;
+}
+
 .img-thumbnail {
   display: inline-block;
   height: auto;
