--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,24 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Strona główna";
 }
+
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-md-4">
+            <img src=@ViewBag.NewBandImg class="img-rounded2" alt="Obrazek" />
+        </div>
+        <div class="col-md-6">
+            <h2>@ViewBag.NewBandHeader</h2>
+            <p class="lead">
+                Typ: @ViewBag.NewBandType <br />
+                Data założenia: @ViewBag.NewBandDate <br />
+                Ilość @ViewBag.NewBandSex: @ViewBag.NewBandMembers <br />
+
+            </p>
+            <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        </div>       
+    </div>
+</div>
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
